tests/NormalTests/paczka1/fuzzy1/65888831.err
Error in line 2: zcG S618 25,5
Error in line 4: zcG S451 65,2
Error in line 8: REszU S179 4,6
Error in line 5: QlmikuT S179 27,9
Error in line 14: AnZ S179 1,0
Error in line 18: HXDDx S451 75,6
Error in line 30: HXDDx S618 19,8
Error in line 27: YOZLvO0vSI S618 71,4
